fix(): Correct fireenjinTrigger event input keys and add proper sort methods and align with filters

--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -12,7 +12,7 @@ fireenjin-search-bar .search-bar-wrapper {
   justify-content: space-between;
   align-content: center;
 }
-fireenjin-search-bar .filter-bar {
+fireenjin-search-bar .chip-bowl {
   display: inline-flex;
   flex-wrap: nowrap;
   overflow-x: auto;
@@ -22,29 +22,29 @@ fireenjin-search-bar .filter-bar {
   max-width: 100%;
   padding-bottom: 3px;
 }
-fireenjin-search-bar .filter-bar::-webkit-scrollbar {
+fireenjin-search-bar .chip-bowl::-webkit-scrollbar {
   height: 5px;
 }
-fireenjin-search-bar .filter-bar::-webkit-scrollbar-thumb {
+fireenjin-search-bar .chip-bowl::-webkit-scrollbar-thumb {
   background: rgba(var(--ion-text-color-rgb), 0.6);
   border-radius: 2px;
 }
-fireenjin-search-bar .filter-bar ion-chip {
+fireenjin-search-bar .chip-bowl ion-chip {
   margin: auto 10px;
   border-color: rgba(var(--ion-text-color-rgb), 0.8);
   opacity: 0.8;
 }
-fireenjin-search-bar .filter-bar ion-chip:hover {
+fireenjin-search-bar .chip-bowl ion-chip:hover {
   opacity: 1;
 }
-fireenjin-search-bar .filter-bar ion-chip ion-icon {
+fireenjin-search-bar .chip-bowl ion-chip ion-icon {
   color: var(--ion-text-color);
   display: inline-block;
   opacity: 0.6;
   height: 20px;
   width: 20px;
 }
-fireenjin-search-bar .filter-bar ion-chip:last-of-type {
+fireenjin-search-bar .chip-bowl ion-chip:last-of-type {
   margin-right: 50px;
 }
 fireenjin-search-bar .filter-button {
